crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@incorrect_number_of_return_types_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/incorrect_number_of_return_types_fail.tapir
---
Error: Function should be returning 2 return values, but you are actually returning 1.
   ╭─[ incorrect_number_of_return_types_fail.tapir:2:5 ]
   │
 1 │ fn my_function() -> (int, fix) {
   │                      ────┬───  
   │                          ╰───── Function returns 2 values
 2 │     return 3;
   │     ────┬────  
   │         ╰────── This has 1 return values
   │ 
   │ Note: Functions must return a fixed number of values
───╯
Error: Function should be returning 2 return values, but you are actually returning 3.
   ╭─[ incorrect_number_of_return_types_fail.tapir:6:5 ]
   │
 5 │ fn my_other_function() -> (bool, int) {
   │                            ────┬────  
   │                                ╰────── Function returns 2 values
 6 │     return false, 4, 8.3;
   │     ──────────┬──────────  
   │               ╰──────────── This has 3 return values
   │ 
   │ Note: Functions must return a fixed number of values
───╯
